Bug 1579953 - Check details element to determine whether to reframe. r=emilio

If the <details> has ::first-letter, insertion.mParentFrame may be
modified by GetInsertionPrevSibling(), and points to nsFirstLetterFrame.

Fortunately, nsFirstLetterFrame's content is the details element. We can
check the content to determine if reframing the <details> is needed.

Also, add a reftest to test that an appended text should apply styles in
details::first-line.

Differential Revision: https://phabricator.services.mozilla.com/D45454